--- a/admin/admin.css
+++ b/admin/admin.css
@@ -990,6 +990,7 @@ body.light-theme .moon-icon {
   .create-page-main {
     padding: 1.5rem 1rem;
   }
+}
 
   .create-icon-wrapper {
     margin-bottom: 1rem;
